# MTR

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  archive.py  gui.py  launch.sh  podman-compose.yml  pyproject.toml  requirements.txt  run_metis.py
.github/workflows/: publish.yml  unit_tests.yaml
container/: compose.yml
examples/: small_test.csv  small_test.yaml
src/: archive.py  gui.py  run_metis.py
src/metis_test_runner/: __init__.py  archive.py  credentials.py  direct.py  env.py  gui.py  indexes.py  paths.py  run_metis.py
src/metis_test_runner/examples/: small_test.yaml  small_test_img_lm.csv  small_test_img_lm.yaml  small_test_img_n.csv  small_test_img_n.yaml
tests/: conftest.py  test_archive.py  test_credentials.py  test_direct.py  test_env.py  test_gui.py  test_run_metis.py
