[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "metis-test-runner"
version = "0.2.0"
description = "GUI and CLI wrapper for end-to-end ESO METIS pipeline testing"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.12,<3.14"
authors = [{ name = "AstarVienna" }]
keywords = ["astronomy", "ESO", "METIS", "ELT", "pipeline", "scopesim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    # Pinned: newer PyQt6-Qt6 wheels (>=6.7) segfault on some Wayland setups.
    "PyQt6==6.6.0",
    "PyQt6-Qt6==6.6.0",
    "PyYAML",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
mtr     = "metis_test_runner.gui:main"
mtr-cli = "metis_test_runner.run_metis:main"

[project.gui-scripts]
mtr-gui = "metis_test_runner.gui:main"

[project.urls]
Homepage  = "https://github.com/AstarVienna/MTR"
Issues    = "https://github.com/AstarVienna/MTR/issues"
Changelog = "https://github.com/AstarVienna/MTR/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_test_runner"]

[tool.hatch.build.targets.sdist]
include = [
    "src/metis_test_runner",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
